--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
     "mysql2": "^2.3.3",
+    "require": "^2.4.20",
     "sequelize": "^6.19.0"
   }
 }
